--- a/style.css
+++ b/style.css
@@ -14,8 +14,13 @@ body {
     /* background-color: red; */
     display: flex;
     flex-direction: column;
-}
+    background-color: #f3f7f8;
 
+}
+p{
+    margin: 0;
+    padding: 0;
+}
 
 
 /* ----------------------------------------------------------------- */
@@ -98,28 +103,43 @@ header {
 /* ----------------------------------------------------------------- */
 
 /*-------------------------------------- Start Request Section------------------------------ */
-.container{
+.request-section{
+    padding:40px 0 40px 0 ;
+}
+.request-section .container{
     padding: 40px;
-    /* border: 1px solid black; */
-    
+    border-radius: 5px;
+    border: 1px solid #d6cece;
+    background-color: #fff;
 
 }
 .all-heading {
     font-size: 25px;
     font-weight: 500;
-    position: relative;
+    /* position: relative; */
     text-align: center;
     padding: 0 0 20px 0; 
 }
-.all-heading::before {
+/* .all-heading::before {
     content: "";
     position: absolute;
     height: 3px;
     left: 0;
     bottom: 0;
-    width: 100%;
+
+    width: 100px;
     background-color: rgb(110, 238, 138);
+} */
+
+.all-heading::after {
+    background: rgb(110, 238, 138);
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    margin-top: 10px;
 }
+
 
 form .card-details {
     margin-top: 25px;
@@ -194,60 +214,169 @@ form button:hover {
 /*-------------------------------------- End Request Section------------------------------ */
 
 /*-------------------------------------- Start How we works------------------------------ */
+.hover-box{
+    border: 1px solid #d6cece;
+    border-radius: 5px;
+    transition: all linear 0.7;
+}
 
-.how-we-works .centerdiv {
-    border: 1px solid rgb(255, 255, 255);
+.hover-box:hover{
+    box-shadow: 0 0 10px #08bd4d;
+}
+.heading,.row p {
+    margin-bottom:20px ;
+}
+.how-we-works h2{
+    text-align: center;
+    color: #50934a;
+    font-size: 30px;
+    font-weight: 700;
+}
+.hww-box{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.how-we-works{
-    /* background-color: rgb(55, 175, 81); */
-    padding: 30px 0 30px 0;
-}
-
-.how-we-works .container{
-    /* border: 2px solid #ccc; */
+    flex-direction: column;
+    padding: 20px 0 20px 0;
     box-sizing: border-box;
-    border-radius: 10px;
-    background-color: white;
-    box-shadow: 0 0 10px #666;
+}
+.hww-box img{
+    border-radius: 5px ;
+    /* margin-top: 20px; */
+    margin-bottom: 20px;
+    object-fit: contain;
+}
+.hww-box h4{
+    padding-bottom: 10px;
+    color: #50934a;
 
 }
-.how-we-works .cardbox{
-    margin-top: 20px;
-    width: 255px;
-    border-radius: 10%;
-    border: 2px solid #ccc;
-    box-sizing: border-box;
-    box-shadow: 0 0 10px #666;
-    
-}
-.how-we-works .cardbox img{
-    margin-right: auto;
-    margin-left: auto;
-    width: 100%;
-    display: block;
-    border-radius: 10% 10% 0 0;
-    margin-bottom: 15px;
-    
-}
-.how-we-works .cardbox p{
-    text-align: center;
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 15px;
-}
+.hww-box p{
+    padding-bottom: 0;
+    color: black;
+    font-weight: 500;
 
+}
 /*-------------------------------------- End How we works------------------------------ */
 
 /*-------------------------------------- Start Why OmScrap?------------------------------ */
 .why-we{
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    margin-top: 15px;
     /* #183F08 */
+}
+.heading-all{
+    margin-top: 15px;
+    margin-bottom: 15px;
+
+    text-align: center;
+    color: #50934a;
+    font-size: 30px;
+    font-weight: 700;
+}
+.ww-box{
+    width: 180px;
+    height: 100%;
+    /* border: 1px solid black; */
+    /* position: relative; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px;
+    /* padding-bottom: 0; */
+    box-sizing: border-box;
+    
+}
+.why-we .img-box{
+    height: 70%;
+}
+.why-we .img-footer{
+    height: 30%;
+    
+}
+.why-we img{
+    background-color: #fff;
+
+    /* position: absolute;
+    top: 0;
+    left: 0; */
+    width: 100%;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    transition: transform .6s;
+
+}
+.why-we img:hover{
+    transform: scale(1.1);
+    box-shadow: 0 0 10px #71e961;
+}
+.why-we p{
+    width: 100%;
+    /* top: 0; */
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: 500;
 }
 /*-------------------------------------- End Why OmScrap?------------------------------ */
 
 /*-------------------------------------- Start Footer------------------------------ */
+
+#footer-section{
+    width: 100%;
+    border: 1px solid black;
+    box-sizing: border-box;
+    display: flex;
+    background-color: rgb(189, 185, 185);
+    /* justify-content: center;
+    align-items: center; */
+    color: black;
+}
+
+.footer-left-side {
+    width: 10%;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    
+
+}
+/* .footer-logo, .logo-recycle{ */
+    /* width: 100%; */
+
+    /* height: 100%; */
+/* } */
+
+.footer-logo img, .logo-recycle img{
+    width: 100px;
+    height: 100px;
+    
+}
+.footer-website-link {
+    border: 1px solid black;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+/* .footer-social-side { */
+    /* width:40%; */
+    /* border: 1px solid black; */
+    /* margin:auto; */
+    
+
+/* } */
+/* .footer-right-side { */
+    /* width: 100%; */
+    /* border: 1px solid black; */
+
+/* } */
+
 /*-------------------------------------- End Footer------------------------------ */
 
