--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ header {
     background-image: url('image/background.jpg') ;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 80vh;
+    height: 90vh;
     padding: 80px 80px;
     color: #fff;
     /* padding-bottom: 30px; */
@@ -189,7 +189,7 @@ form .card-details .card-box{
 
 }
 form button{
-    padding: 5px;
+    padding: 10px;
     margin-top: 10px;
     height: 100%;
     width: auto;
@@ -324,59 +324,132 @@ form button:hover {
 
 #footer-section{
     width: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     box-sizing: border-box;
     display: flex;
-    background-color: rgb(189, 185, 185);
-    /* justify-content: center;
-    align-items: center; */
-    color: black;
+    flex-wrap: wrap;
+    
 }
 
-.footer-left-side {
-    width: 10%;
-    border: 1px solid black;
+.footer-row{
+    width: 100%;
+    /* border: 1px solid black; */
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #555050;
+}
+.footer-col{
+    width: 25%;
+    /* border: 1px solid black; */
+    box-sizing: border-box;
+    padding: 50px;
+}
+.footer-col h4{
+    font-size: 18px;
+	color: #fff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::after{
+    content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #43db71;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-row ul{
+    list-style: none;
+}
+.footer-col ul li a{
+    font-size: 16px;
+	text-transform: capitalize;
+	color: #fff;
+	text-decoration: none;
+	font-weight: 500;
+	display: block;
+	transition: all 0.3s ease;
+    margin-bottom: 5px;
+}
+.footer-col ul li a:hover{
+	padding-left: 8px;
+	color: #43db71;
+}
+
+.footer-col .footer-social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	transition: all 0.3s ease;
+    color: #eee;
+    background-color: green;
+}
+.footer-col .footer-social-links a:hover{
+    color: #020000;
+    transform: scale(1.1);
+    box-shadow: 0 0 10px #71e961;
+    background-color: #43db71;
+}
+.footer-col .footer-address{
+    text-transform: capitalize;
+    font-weight: 500;
+    margin-bottom: 15px;
+    color: #fff;
+}
+.footer-col .footer-phone{
+    text-transform: capitalize;
+    font-weight: 500;
+    color: #fff;
+    
+}
+.footer-col .footer-phone a{
+    color: #fff;
+    font-weight: 500;
+    text-decoration: none;
+    
+}
+.footer-col .footer-logo{
+    width: 100%;
+    height: 50%;
+    padding-right: 50px;
+    margin-bottom: 0;
+
+    
+}
+.hello{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
-    
+}
+.footer-recycle{
+    width: 100%;
+    height: 30%;
+    padding-right: 50px;
+    margin-top: 0;
+}
+.footer-col .footer-logo img{
+    width: 120px;
+    height: 120px;
+    background-color: #fff;
+    border-radius: 10px 10px 0 0 ;
+
 
 }
-/* .footer-logo, .logo-recycle{ */
-    /* width: 100%; */
+.footer-col .footer-recycle img{
+    width: 120px;
+    height: 120px;
+    background-color: #fff;
+    border-radius:0 0 10px 10px;
 
-    /* height: 100%; */
-/* } */
-
-.footer-logo img, .logo-recycle img{
-    width: 100px;
-    height: 100px;
-    
-}
-.footer-website-link {
-    border: 1px solid black;
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
 
 }
-/* .footer-social-side { */
-    /* width:40%; */
-    /* border: 1px solid black; */
-    /* margin:auto; */
-    
-
-/* } */
-/* .footer-right-side { */
-    /* width: 100%; */
-    /* border: 1px solid black; */
-
-/* } */
-
 /*-------------------------------------- End Footer------------------------------ */
 
