--- a/style.css
+++ b/style.css
@@ -79,14 +79,16 @@ header {
 
 /* ----------------------------------------------------------------- */
 /* BackGround Banner */
-
+/* 
 .section-banner{
     border: 2px solid black;
     box-sizing: border-box;
-    background-image: url('image/background.jpg') ;
+    background-image: url('image/background1.jpg') ;
     background-repeat: no-repeat;
     background-size: cover;
     height: 90vh;
+    height: 600px;
+
     padding: 80px 80px;
     color: #fff;
     padding-bottom: 30px;
@@ -100,7 +102,7 @@ header {
     font-size:50px;
     text-shadow: 2px 2px 5px  rgb(45, 221, 83);
     padding: 10px;
-}
+} */
 
 
 /* ---------------------------------------------------------------------------------------------------------------- */
@@ -108,11 +110,11 @@ header {
 
 .banner-container{
     width: 100%;
-    height: 600px;
+    height: 500px;
     /* background-color: red; */
     /* position: relative; */
     box-sizing: border-box;
-    border: 1px solid rgb(0, 0, 0);
+    /* border: 1px solid rgb(0, 0, 0); */
 
 }
 
@@ -122,7 +124,7 @@ header {
     height: 100%;
     /* background-color: red; */
     /* box-shadow: 0 0 5px gray; */
-    border-radius: 5px;
+    /* border-radius: 5px; */
     margin: auto;
     /* margin-top: 50px; */
     overflow: hidden;
