--- a/style.css
+++ b/style.css
@@ -152,6 +152,21 @@ header {
     font-weight: 700;
     color: white;
 }
+.banner_text  h2{
+    font-size:50px;
+    font-weight: 700;
+    background-color: rgba(255, 255, 255, 0.329);
+
+    /* text-shadow: 2px 2px 5px  rgb(45, 221, 83); */
+    padding: 10px;
+}
+.banner_text h4{
+    font-weight: 700;
+    background-color: rgba(37, 37, 37, 0.329);
+    font-size:50px;
+    /* text-shadow: 2px 2px 5px  rgb(45, 221, 83); */
+    padding: 10px;
+} */
 /* -------------------------------- */
 
 
@@ -315,12 +330,12 @@ form button:hover {
 
 /*-------------------------------------- Start How we works------------------------------ */
 .hover-box{
-    border: 1px solid #d6cece;
+    /* border: 1px solid #000000; */
     border-radius: 5px;
     transition:  0.7s;
     box-sizing: border-box;
     margin: auto;
-    /* height: 500px; */
+    height: 450px;
     object-fit: contain;
 }
 
@@ -427,6 +442,10 @@ form button:hover {
     font-weight: 500;
 }
 /*-------------------------------------- End Why OmScrap?------------------------------ */
+/*-------------------------------------- Start Query------------------------------ */
+
+
+/*-------------------------------------- End Query------------------------------ */
 
 /*-------------------------------------- Start Footer------------------------------ */
 
