--- a/style.css
+++ b/style.css
@@ -32,11 +32,12 @@ header {
     justify-content: space-between;
     align-items: center ;
     padding: 0 80px;
-    box-shadow: 0 5px 15px rgb(45, 221, 83);
+    box-shadow: 0 5px 15px rgb(162, 245, 180);
     position: sticky;
     top: 0;
     left: 0;
     z-index: 1;
+    /* margin-bottom: 10px; */
 
 }
 #navbar {
@@ -329,29 +330,40 @@ form button:hover {
 /*-------------------------------------- End Request Section------------------------------ */
 
 /*-------------------------------------- Start How we works------------------------------ */
+.how-we-works{
+    border: 1px solid rgb(0, 0, 0);
+    padding: 20px;
+    background-color: #43db71;
+}
+
 .hover-box{
     /* border: 1px solid #000000; */
     border-radius: 5px;
-    transition:  0.7s;
+    transition: all  0.7s ease-in-out;
     box-sizing: border-box;
     margin: auto;
     height: 450px;
     object-fit: contain;
 }
 
-.hover-box:hover{
-    box-shadow: 0 0 10px #08bd4d;
-    transform: scale(1.01);
+.hover-box:hover,.hww-box img:hover{
+    box-shadow: 0 0 5px #919592;
+    /* transform: scale(1.01); */
+    background-color: #017d26;
+    border-radius: 50px 0 50px 0;
 }
 .heading,.row p {
     margin-bottom:20px ;
     text-align: center;
+    color: #000000;
+
+
 }
 .how-we-works h2{
     text-align: center;
-    color: #50934a;
+    color: #ffffff;
     font-size: 30px;
-    font-weight: 700;
+    font-weight: 800;
 }
 .hww-box{
     display: flex;
@@ -367,10 +379,14 @@ form button:hover {
     /* margin-top: 20px; */
     margin-bottom: 20px;
     object-fit: contain;
+    transition: all  0.7s ease-in-out;
+
 }
 .hww-box h4{
-    padding-bottom: 10px;
-    color: #50934a;
+    padding-bottom: 5px;
+    color: #ffffff;
+    /* color: #50934a; */
+    /* background-color: red; */
 
 }
 .hww-box p{
@@ -431,7 +447,7 @@ form button:hover {
 
 }
 .why-we img:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
     box-shadow: 0 0 10px #71e961;
 }
 .why-we p{
@@ -443,7 +459,36 @@ form button:hover {
 }
 /*-------------------------------------- End Why OmScrap?------------------------------ */
 /*-------------------------------------- Start Query------------------------------ */
+.query_row{
+    border: 1px solid black;
+    background-color: #43db71;
+    display: flex;
 
+}
+.query_row .left_img{
+    border: 1px solid black;
+    /* background-color: red;  */
+    width: 10%;
+
+}
+.query_row .left_img img{
+    /* border: 1px solid black; */
+    /* background-color: red;  */
+    width: 100%;
+
+}
+.query_row .right_img{
+    border: 1px solid black;
+    /* background-color: red;  */
+    width: 10%;
+
+}
+.query_row .right_img img{
+    /* border: 1px solid black; */
+    /* background-color: red;  */
+    width: 100%;
+
+}
 
 /*-------------------------------------- End Query------------------------------ */
 
