--- a/style.css
+++ b/style.css
@@ -461,35 +461,68 @@ form button:hover {
 /*-------------------------------------- Start Query------------------------------ */
 .query_row{
     border: 1px solid black;
-    background-color: #43db71;
     display: flex;
-
+    padding: 30px;
+    user-select: none;
 }
-.query_row .left_img{
-    border: 1px solid black;
-    /* background-color: red;  */
-    width: 10%;
-
-}
-.query_row .left_img img{
+.query_row .left_img, .query_row .right_img{
     /* border: 1px solid black; */
     /* background-color: red;  */
-    width: 100%;
-
+    width: 15%;
+    margin: 30px;
+    /* padding: 0; */
+    
 }
-.query_row .right_img{
+.query_row .left_img img, .query_row .right_img img{
     border: 1px solid black;
-    /* background-color: red;  */
-    width: 10%;
-
-}
-.query_row .right_img img{
-    /* border: 1px solid black; */
     /* background-color: red;  */
     width: 100%;
 
 }
 
+.query_row .center_query{
+    /* border: 1px solid black; */
+    margin: auto;
+    padding: 20px;
+    width: 70%;
+    border-radius: 0 60px 0 60px;
+    box-shadow: 0 0 3px rgb(92, 90, 90);
+    background-color: rgb(11, 88, 4);
+    
+
+}
+.query_row .center_query .query_text, .query_phone{
+    /* border: 1px solid black; */
+    padding: 10px;
+    color: white;
+}
+.query_phone{
+    text-align: right;
+    position: relative;
+}
+.query_row .center_query .query_text h2{
+    font-size: 50px;
+    font-weight: 700;
+}
+.query_row .center_query .query_phone h3{
+    font-size: 30px;
+    font-weight: 500;
+    /* border: 1px solid black; */
+    padding: 15px;
+}
+.query_phone span{
+    border: 1px solid black;
+    font-size: 100px;
+    font-weight: 900;
+    position: absolute;
+    left: 50px;
+    top: 0;
+    padding:10px;
+    line-height: 60px;
+    /* padding-left: 50px; */
+    animation: name duration timing-function delay iteration-count direction fill-mode;
+    
+}
 /*-------------------------------------- End Query------------------------------ */
 
 /*-------------------------------------- Start Footer------------------------------ */
